update wishlist page schema

--- a/sections/wishlist.liquid
+++ b/sections/wishlist.liquid
@@ -190,11 +190,10 @@
   class="wishlist_section_container wishlist_product_container"
   shop-currency="{{ shop.money_format }}"
   currency-data="{{ shop.currency }}"
->
-</div>
+></div>
 <div class="text-center mt-5 txt empty_wishlist_message_wrapper">
   <div class="cart__warnings empty_wishlist_message">
-    <h1 class="cart__empty-text wishlist_empty_text_">Your Wishlist is empty</h1>
+    <h1 class="cart__empty-text wishlist_empty_text_">{{ section.settings.empty_wishlist_title }}</h1>
     <a href="{{ routes.all_products_collection_url }}" class="button"> Continue shopping </a>
 
     {%- if shop.customer_accounts_enabled and customer == null -%}
@@ -358,7 +357,7 @@
     // wishlist content
     const wishlistList = localStorage.getItem('wishListAdd');
     const getStoredData = JSON.parse(wishlistList) || [];
-    console.log('wishlistList', getStoredData);
+    // console.log('wishlistList', getStoredData);
 
     // Create a skeleton structure
     const skeletonContainer = document.querySelector('.skeleton_container');
@@ -373,7 +372,6 @@
       skeletonContainer.innerHTML += skeletonHTML;
     }
 
-
     document.querySelector('.wishlist_count_number').textContent = `${getStoredData.length}`;
 
     async function fetchData(item) {
@@ -386,8 +384,8 @@
         const response = await fetch(`/products/${item}.js`);
         const product = await response.json();
 
-        console.log(`Data for ${item}:`, product);
-        
+        // console.log(`Data for ${item}:`, product);
+
         // Remove the skeleton item
         clonedSkeletonItem.remove();
 
@@ -491,12 +489,42 @@
       }
       // Remove skeleton container once wishlist items are loaded
       document.querySelector('.skeleton_container').innerHTML = '';
-      document.querySelector('.skeleton_container').style.setProperty("display","none","important");
+      document.querySelector('.skeleton_container').style.setProperty('display', 'none', 'important');
     }
 
     // Call the function to start fetching data for each item
     fetchAllData();
-
-    
   });
 </script>
+
+{% schema %}
+{
+  "name": "Wishlist Page",
+  "tag": "section",
+  "class": "slideshow",
+  "limit": 1,
+  "settings": [
+    {
+      "type": "text",
+      "id": "empty_wishlist_title",
+      "label": "Empty Wishlist Heading",
+      "default": "Your Wishlist is empty"
+    }
+  ],
+  "max_blocks": 5,
+  "blocks": [
+    
+  ],
+  "presets": [
+    {
+      "name": "Wishlist Page",
+      "settings": {
+        "empty_wishlist_title": "Your Wishlist is empty"
+      },
+      "blocks": [
+        
+      ]
+    }
+  ]
+}
+{% endschema %}
